--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "framer-motion": "^11.2.14",
     "next": "^14.2.4",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "three": "^0.166.1"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
